--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<body>
-    <h1>Esta es una pagina de prueba</h1>
-	<p>Este es un segundo cambio</p>
-
-	
-</body>
-</html>
+<!DOCTYPE html><html><body>    <h1>Esta es una pagina de prueba</h1>	<p>Este es un segundo cambio</p>	<p>Lanzamiento</p>	<p>2023</p></body></html>
